# ImtCore

./: .gitattributes  .gitignore  .gitmodules  .gitmodules.template  ACTION_REQUIRED.md  ARCHITECTURE_COMPARISON.md  BUILD_TROUBLESHOOTING.md  COMPLETION_SUMMARY.txt  CRA_COMPLIANCE.md  IMPLEMENTATION_SUMMARY.md  LICENSING_ARCHITECTURE.md  LICENSING_DOCUMENTATION_SUMMARY.md  MIGRATION_3RDPARTY_TO_SUBMODULES.md  MIGRATION_FILES_README.md  PAT_EDITOR_REFACTORING.md  PAT_EDITOR_REFACTORING_RU.md  PAT_TOKEN_IMPLEMENTATION.md  PAT_TOKEN_IMPLEMENTATION_RU.md  PR_SUMMARY.md  PYTHON_MIGRATION_GUIDE.md  PartituraUpgrade.py  QMAKE_COMMAND_CHAIN_SOLUTION.md  QUICK_REFERENCE.md  README.md  SBOM.md  SECURITY.md  STEP_BY_STEP_MIGRATION.md  SUBMODULE_SETUP_INSTRUCTIONS.md  add-submodules.bat  add-submodules.sh  conanfile.py  create-github-repos.bat  create-github-repos.sh  migrate-3rdparty.bat  migrate-3rdparty.sh  sbom.json  sbom.spdx.json
.github/workflows/: TEAMCITY_INTEGRATION.md  stats-pages.yml  teamcity-trigger.yml
Config/: BaseOnly.awc  ImtCore.awc  ImtCoreTest.awc
Config/CMake/: DdlCreator.cmake  DesigenTokenCreator.cmake  DesignTokenCreator.cmake  EjDoc.cmake  EjExport.cmake  EjMiniZipper.cmake  ImtCore.cmake  ImtCoreDesign.cmake  ImtCoreDesignWeb.cmake  ImtCoreEnv.cmake  ImtCoreProjectSdlConfig.cmake  ImtCoreSdl.cmake  ImtCoreSdlAutoConfig.cmake  ImtCoreSdlConfig.cmake  ImtCoreSdlCustomConfig.cmake  ImtCoreSdlModuleConfig.cmake  ImtEnv.cmake  ImtSdlConfig.cmake  Mdbx.cmake  MongoCXX.cmake  OpenSSL.cmake  PartituraUpgrade.cmake  QXlsx.cmake  Quazip.cmake  WebCompiler.cmake  pybind11.cmake
Config/Python/: SdlFileNameExtractor.py
Config/QMake/: Boost.pri  DdlCodeCreator.pri  DesigenTokenCreator.pri  DesignTokenCreator.pri  Eigen3.pri  Flann.pri  ImtCore.pri  Mdbx.pri  NICP.pri  OpenSSL.pri  Plugin.pri  QmlControls.pri  Quazip.pri  SdlCodeGenerator.pri  SdlConfiguration.pri  TestConfig.pri  ToolApplicationConfig.pri  WebCompiler.pri  WebQrc.pri  pybind11.pri
Config/SDL/: CommonCXX.cfg  CommonCXX.template.cfg  CommonQML.cfg
Docs/: .gitignore  ARCHITECTURAL_REVIEW_SUMMARY.md  ARCHITECTURE_JOB_STATUS_SEPARATION.md  Doxyfile  FigmaDesignTokensIntegration.md  FigmaIntegrationFinal.md  FigmaIntegrationSummary.md  GenerateDocs.bat  IEC_62443_CR_3_7_Completion_Summary.md  IEC_62443_CR_3_7_Examples.md  IEC_62443_CR_3_7_Implementation.md  LibraryArchitectureDiagrams.md  LibraryOrganization-SUMMARY.md  LibraryQuickReference.md  LibraryReorganizationProposal.md  LibraryReorganizationProposal.ru.md  MIGRATION_GUIDE_JOB_STATUS.md  SDL_CollectionSchema_Guide.md  SDL_Documentation_Index.md  SDL_Ref_Cheat_Sheet.md  SDL_Ref_Diagrams.md  SDL_Ref_Examples.md  SDL_Ref_Quick_Reference.md  SDL_Reference_Attribute_Guide.md  SETTINGS_REFACTORING.md  WebCompiler_Guide.md  imtdb_architecture.dox  imtdev_README.md  imtdev_architecture.dox
Impl/DdlCodeCreatorExe/: DdlCodeCreator.acc  DdlCodeCreator.accl  Main.cpp
Impl/DesignTokenCreatorExe/: DesignTokenCreator.acc  DesignTokenCreator.accl  DesignTokenCreatorExe.acc  DesignTokenCreatorExe.accl  Main.cpp
Impl/DesignTokenCreatorExe/CMake/: CMakeLists.txt
Impl/DesignTokenCreatorPck/: DesignTokenCreatorPck.cpp  DesignTokenCreatorPck.h
Impl/EagleGuiPck/: EagleGuiPck.cpp  EagleGuiPck.h
Impl/EagleLoc/: EagleLoc.qrc
Impl/EaglePck/: EaglePck.cpp  EaglePck.h
Impl/EagleView/: EagleView.acc  EagleView.accl  Main.cpp
Impl/EagleViewExe/: EagleView.acc  EagleView.accl  Main.cpp
Impl/Imt3dGuiPck/: Imt3dGuiPck.cpp  Imt3dGuiPck.h
Impl/Imt3dGuiPck/CMake/: CMakeLists.txt
Impl/Imt3dPck/: Imt3dPck.cpp  Imt3dPck.h
Impl/Imt3dPck/CMake/: CMakeLists.txt
Impl/Imt3dViewPck/: Imt3dViewPck.cpp  Imt3dViewPck.h
Impl/Imt3dViewPck/CMake/: CMakeLists.txt
Impl/ImtAlgoPck/: ImtAlgoPck.cpp  ImtAlgoPck.h
Impl/ImtAppPck/: ImtAppPck.cpp  ImtAppPck.h
Impl/ImtAuthDbPck/: ImtAuthDbPck.cpp  ImtAuthDbPck.h
Impl/ImtAuthGqlPck/: ImtAuthGqlPck.cpp  ImtAuthGqlPck.h
Impl/ImtAuthGqlPck/CMake/: CMakeLists.txt
Impl/ImtAuthGuiPck/: ImtAuthGuiPck.cpp  ImtAuthGuiPck.h
Impl/ImtAuthGuiPck/CMake/: CMakeLists.txt
Impl/ImtAuthPck/: ImtAuthPck.cpp  ImtAuthPck.h
Impl/ImtAuthPck/CMake/: CMakeLists.txt
Impl/ImtClientGqlPck/: ImtClientGqlPck.cpp  ImtClientGqlPck.h
Impl/ImtClientGqlPck/CMake/: CMakeLists.txt
Impl/ImtColPck/: ImtColPck.cpp  ImtColPck.h
Impl/ImtComPck/: ImtComPck.cpp  ImtComPck.h
Impl/ImtComPck/CMake/: CMakeLists.txt
Impl/ImtControlsGallery/: ImtControlsGallery.acc  ImtControlsGallery.accl  ImtControlsGallery.qrc  Main.cpp
Impl/ImtControlsGallery/CMake/: CMakeLists.txt
Impl/ImtCoreGuiPck/: ImtCoreGuiPck.cpp  ImtCoreGuiPck.h
Impl/ImtCoreLoc/: ImtCoreLoc.qrc
Impl/ImtCorePck/: ImtCorePck.cpp  ImtCorePck.h
Impl/ImtCorePck/CMake/: CMakeLists.txt
Impl/ImtCryptPck/: ImtCryptPck.cpp  ImtCryptPck.h
Impl/ImtCryptPck/CMake/: CMakeLists.txt
Impl/ImtCrypterPck/: ImtCrypterPck.cpp  ImtCrypterPck.h
Impl/ImtDatabaseGqlPck/: ImtDatabaseGqlPck.cpp  (+1 more)
Impl/ImtDatabasePck/CMake/: CMakeLists.txt
Impl/ImtEjPck/CMake/: CMakeLists.txt
Impl/ImtGeoPck/CMake/: CMakeLists.txt
Impl/ImtGqlDbPck/CMake/: CMakeLists.txt
Impl/ImtGqlPck/CMake/: CMakeLists.txt
Impl/ImtGqlRepoPck/CMake/: CMakeLists.txt
Impl/ImtGuiGqlPck/CMake/: CMakeLists.txt
Impl/ImtGuiPck/CMake/: CMakeLists.txt
Impl/ImtHttpPck/CMake/: CMakeLists.txt
Impl/ImtHypeDbPck/CMake/: CMakeLists.txt
Impl/ImtHypeGuiPck/CMake/: CMakeLists.txt
Impl/ImtHypePck/CMake/: CMakeLists.txt
Impl/ImtLicenseGqlPck/CMake/: CMakeLists.txt
Impl/ImtLicenseGuiPck/CMake/: CMakeLists.txt
Impl/ImtLicensePck/CMake/: CMakeLists.txt
Impl/ImtLogGuiPck/CMake/: CMakeLists.txt
Impl/ImtLogPck/CMake/: CMakeLists.txt
Impl/ImtMongoPck/CMake/: CMakeLists.txt
Include/: ImtCore.h  README.md
Install/: Doxyfile  Install.iss  InstallationInfo.txt  _Create_VC15_Commercial.bat  _Create_VC15_Installation.bat  _Create_VC15_OpenSource.bat  _Create_VC16_OpenSource.bat  _Create_VC17_OpenSource.bat
Tests/: test_figma_processor.py  test_figma_tokens.sh
scripts/: README.md  generate_stats.py  stats_template.html
(+6313 files in other folders)
